# energy-tariff-pricing-engine

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
config/: base.yaml
docs/: INTERVIEW_PITCH.md  METHODOLOGY.md  README.md  USER_GUIDE.md
pricing_engine/: __init__.py  __main__.py  charges.py  config.py  export_csv.py  export_excel.py  market_data.py  sanity.py  schemas.py  tariff_engine.py  waterfall.py
sample_data/: customer_archetypes.csv  losses.csv  pass_through_charges.csv  shaping_adders.csv  wholesale_elec_ni_2026.csv  wholesale_elec_roi_2026.csv  wholesale_gas_ni_2026.csv  wholesale_gas_roi_2026.csv
tests/: test_charges.py  test_sanity.py  test_schemas.py  test_tariff_engine.py
